--- a/package.json
+++ b/package.json
@@ -15,14 +15,15 @@
     "clsx": "^2.1.1",
     "hamburger-react": "^2.5.2",
     "lucide-react": "^0.468.0",
-    "next": "15.0.3",
+    "next": "^15.1.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-countup": "^6.5.3",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.4.0",
     "tailwind-merge": "^2.5.5",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "webpack": "^5.97.1"
   },
   "devDependencies": {
     "@types/node": "22.10.2",
