--- a/package.json
+++ b/package.json
@@ -10,28 +10,28 @@
   },
   "dependencies": {
     "@material-tailwind/react": "^2.1.10",
-    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-slot": "^1.1.1",
     "@tailwindcss/line-clamp": "^0.4.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "hamburger-react": "^2.5.2",
-    "lucide-react": "^0.468.0",
-    "next": "^15.1.3",
-    "react": "19.0.0-rc-66855b96-20241106",
+    "lucide-react": "^0.471.1",
+    "next": "^15.1.4",
+    "react": "19.0.0",
     "react-countup": "^6.5.3",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-dom": "19.0.0",
     "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.4.0",
-    "tailwind-merge": "^2.5.5",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "webpack": "^5.97.1"
   },
   "devDependencies": {
-    "@types/node": "22.10.2",
-    "@types/react": "19.0.1",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.3",
+    "@types/node": "22.10.6",
+    "@types/react": "19.0.7",
+    "eslint": "^9",
+    "eslint-config-next": "15.1.4",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.17"
   }
 }
