--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.4",
     "postcss": "^8",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "tailwindcss-animated": "^1.1.2"
   }
 }
