--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lucide-react": "^0.471.1",
     "next": "^15.1.4",
     "react": "19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-countup": "^6.5.3",
     "react-dom": "19.0.0",
     "react-fast-marquee": "^1.6.5",
