--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@tailwindcss/line-clamp": "^0.4.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "firebase": "^11.2.0",
+    "firebase-admin": "^13.0.2",
     "hamburger-react": "^2.5.2",
     "lucide-react": "^0.471.1",
     "next": "^15.1.4",
